# Dekoder-AZTEC-2D-Rust

./: Cargo.toml  LICENSE  README.md
przyklady/: dekoduj_dane_dowodu_z_kodu_aztec_2d_dowodu.rs  dekoduj_dane_dowodu_ze_zdjecia_dowodu.rs  dekoduj_dane_ze_zeskanowanego_kodu.rs
src/: lib.rs
